# symmetrical-meme

./: Cargo.toml
src/: main.rs  win_tray.rs
