[package]
name = "symmetrical-meme"
version = "0.1.0"
edition = "2021"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[dependencies]
futures-util = "0.3.19"
tokio-stream = "0.1.8"
warp = "0.3.2"

#TODO
# gluon
# url_open

[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt", "rt-multi-thread", "sync"]

[target.'cfg(windows)'.dependencies]
libc = "0.2.123"
winapi = {version = "0.3.9", features = ["errhandlingapi", "shellapi", "winuser", "impl-default"]}
