[package]
name = "symmetrical-meme"
version = "0.1.0"
edition = "2021"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[dependencies]
futures-util = "0.3.19"
gluon = "0.18.1" #{version = "0.18.1", features = ["gluon_vm"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio-stream = "0.1.8"
warp = "0.3.2"

[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt", "rt-multi-thread", "sync"]

[target.'cfg(windows)'.dependencies]
libc = "0.2.123"
winapi = {version = "0.3.9", features = ["errhandlingapi", "shellapi", "winuser", "impl-default"]}
